# bang-olufsen-legacy

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: tests.yml
cli/: __init__.py  main.py
custom_components/bang_olufsen_legacy/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  media_player.py  select.py  sensor.py  strings.json
custom_components/bang_olufsen_legacy/api/: __init__.py  client.py  errors.py  models.py  notifications.py
custom_components/bang_olufsen_legacy/translations/: en.json
src/beo/: __init__.py  cli.py  client.py  notifications.py
tests/: test_cli.py  test_home_assistant_integration.py  test_live_smoke.py  test_protocol.py
tests/fixtures/: active-sources.json  device-info.json  headphone-volume.json  line-in-settings-profile.json  netradio-profile.json  play-queue.json  services.json  sources.json  speaker-volume.json  volume.json
