[project]
name = "beo"
version = "0.1.0"
description = "Async Python client and CLI for BeoSound Essence Mk1 control APIs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.1",
  "pydantic>=2.11.0",
  "typer>=0.16.0",
]

[project.scripts]
beo = "beo.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.26.0",
  "pytest-httpx>=0.35.0",
  "ruff>=0.11.0",
  "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src", "tests"]
