[project]
name = "beo"
version = "0.1.0"
description = "Async Python client and CLI for BeoSound Essence Mk1 control APIs."
readme = "README.md"
requires-python = ">=3.14.2,<3.15"
dependencies = [
  "httpx>=0.27.2,<0.29",
  "pydantic>=2.11.0",
  "typer>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/nickplee/bang-olufsen-legacy"
Repository = "https://github.com/nickplee/bang-olufsen-legacy"
Issues = "https://github.com/nickplee/bang-olufsen-legacy/issues"

[project.scripts]
beo = "cli.main:main"

[dependency-groups]
dev = [
  "homeassistant>=2026.4,<2026.5",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.26.0",
  "pytest-httpx>=0.36.0,<0.37",
  "ruff>=0.11.0",
  "pyright>=1.1.390",
]

[tool.hatch.build.targets.wheel]
packages = ["cli", "custom_components"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
  "ignore:Inheritance class HomeAssistantApplication from web.Application is discouraged:DeprecationWarning:homeassistant\\.components\\.http",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
include = ["cli", "custom_components", "tests"]
reportIncompatibleVariableOverride = "none"
